--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -406,6 +406,7 @@
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Scripts\knockout.validation.min.js.map" />
     <Content Include="Views\Event\CreateEvent.cshtml" />
+    <Content Include="Views\Home\_events.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="images\" />
