--- a/WebApplication1/WebApplication1/Views/Web.config
+++ b/WebApplication1/WebApplication1/Views/Web.config
@@ -40,4 +40,14 @@
       </assemblies>
     </compilation>
   </system.web>
+
+  <system.web>
+    <globalization
+    requestEncoding="utf-8"
+    responseEncoding="utf-8"
+    culture="en-GB"
+    uiCulture="en-GB" />
+  </system.web>
 </configuration>
+
+
