--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -9,10 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="webtechEntities" connectionString="metadata=res://*/Models.onzeDB.csdl|res://*/Models.onzeDB.ssdl|res://*/Models.onzeDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="webtechEntities1" connectionString="metadata=res://*/Models.OnzeDb.csdl|res://*/Models.OnzeDb.ssdl|res://*/Models.OnzeDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="webtechEntities" connectionString="metadata=res://*/Models.OnzeDb.csdl|res://*/Models.OnzeDb.ssdl|res://*/Models.OnzeDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="webtechEntities1" connectionString="metadata=res://*/Models.OnzeDb.csdl|res://*/Models.OnzeDb.ssdl|res://*/Models.OnzeDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
