--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -278,6 +278,9 @@
     <Compile Include="Models\Table.cs">
       <DependentUpon>OnzeDb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Tag.cs">
+      <DependentUpon>OnzeDb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
