--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -304,6 +304,7 @@
     <Content Include="Content\bootstrap-tokenfield.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\countdowncube.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\layout.css" />
     <Content Include="Content\Site.css" />
@@ -365,6 +366,7 @@
     <Content Include="fonts\Scriber_Bold_Stencil.otf" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\canvas-to-blob.min.js" />
+    <Content Include="Scripts\countdowncube.js" />
     <Content Include="Scripts\daterangepicker.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
