--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -438,7 +438,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Event\SearchEvent.cshtml" />
+    <Content Include="Views\Event\SearchEvent.cshtml">
+      <BrowseToURL>~/Event/EventDetails</BrowseToURL>
+    </Content>
     <Content Include="Views\Event\EditEvent.cshtml" />
     <Content Include="Views\Event\ViewEvent.cshtml" />
     <Content Include="Views\Account\Profile.cshtml" />
@@ -449,6 +451,7 @@
     <Content Include="Views\Account\CheckIns.cshtml" />
     <Content Include="Views\Account\Settings.cshtml" />
     <Content Include="Views\Home\_Event.cshtml" />
+    <Content Include="Views\Event\EventDetails.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
