--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -22,6 +22,7 @@
     <httpRuntime maxRequestLength="35000" enableVersionHeader="false" maxQueryStringLength="3584" executionTimeout="600" />
   </system.web>
   <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
