--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -8,6 +8,16 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <system.diagnostics>
+    <trace>
+      <listeners>
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+          name="AzureDiagnostics">
+          <filter type="" />
+        </add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="webtechEntities" connectionString="metadata=res://*/Models.OnzeDb.csdl|res://*/Models.OnzeDb.ssdl|res://*/Models.OnzeDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="webtechEntities1" connectionString="metadata=res://*/Models.OnzeDb.csdl|res://*/Models.OnzeDb.ssdl|res://*/Models.OnzeDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=webtech.database.windows.net;initial catalog=webtech;user id=zomomo;password=420Blaze;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
