Client Side validation voor create event

--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -11,8 +11,7 @@
   <system.diagnostics>
     <trace>
       <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          name="AzureDiagnostics">
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
           <filter type="" />
         </add>
       </listeners>
@@ -32,7 +31,7 @@
     <httpRuntime maxRequestLength="35000" enableVersionHeader="false" maxQueryStringLength="3584" executionTimeout="600" />
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
