--- a/WebApplication1/WebApplication1/packages.config
+++ b/WebApplication1/WebApplication1/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="4.84.4790.14417" targetFramework="net452" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="Bundler.NET" version="1.5.7" targetFramework="net452" />
   <package id="CloudinaryDotNet" version="1.0.27" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
@@ -37,9 +39,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="nQuant" version="1.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.1" targetFramework="net452" />
+  <package id="WCFDataAnnotations" version="1.1.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
